--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,12 @@ body {
 
     color: rgb(248, 244, 244);
     text-align: -webkit-center;
-    width: 300px;
-    padding: 16px;
+    padding: 2em;
     border-radius: 10px;
-    margin: auto;
     background-color: rgb(78, 58, 166);
-
-    position: inherit;
-
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 10%;
 
 }
 
@@ -59,6 +57,9 @@ body {
     background-color: #7e66b8;
     margin: auto;
     text-align: center;
+    width: 100%;
+    min-width: 50%;
+    max-width: 50%;
 
 }
 
@@ -66,8 +67,8 @@ body {
 #form input[type="email"],
 #form input[type="date"] {
 
+max-width: 50%;
 
-    width: 100%;
 }
 
 #form button {
@@ -79,6 +80,10 @@ body {
     border-radius: 3px;
     display: inline-flexbox;
     margin: 10px 5px 0px 5px;
+    width: 100%;
+    max-width: 6em;
+
+
 }
 
 #btnModificar {
@@ -110,13 +115,14 @@ body {
 
 #tabla {
     position: static;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
+    width: 100%;
     text-align: center;
-    height: 202px;
-    width: 702px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10%;
+    max-width: 60%;
 
+   
 }
 
 
